--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ version: "3"
 services:
   gamerban: &django
     restart: always
-    build: .
+    build: docker/local/
     volumes:
       - ./app/:/usr/src/app/
     env_file: ./app/.env
+    environment:
+      - DEBUG=1
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - 8009:8000
