--- a/docker/local/Dockerfile
+++ b/docker/local/Dockerfile
@@ -10,7 +10,7 @@ ENV PYTHONUNBUFFERED 1
 
 # Requirements are installed here to ensure they will be cached.
 RUN pip install --upgrade pip
-COPY app/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
