--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -14,3 +14,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+CMD ["gunicorn", "gamerban.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
