--- a/docker/local/Dockerfile
+++ b/docker/local/Dockerfile
@@ -14,3 +14,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+ENTRYPOINT ["python", "manage.py", "runserver", "0.0.0.0:8000"]
