--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   gamerban: &django
     restart: always
-    build: docker/local/
+    build: ./
     volumes:
       - ./app/:/usr/src/app/
     env_file: ./app/.env
