--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: ./
     volumes:
       - ./app/:/usr/src/app/
-    env_file: ./app/.env
+    env_file: .env
     environment:
       - DEBUG=1
     ports:
