--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,7 @@ services:
       - ./:/usr/src/app/
     env_file: .env
     environment:
-      - DEBUG=1
+      - DEBUG=0
     ports:
-      - 8009:8000
-    command: python manage.py runserver 0.0.0.0:8000
-    
+      - 80:8000
+    command: gunicorn gamerban.wsgi:application --bind 0.0.0.0:8000
